# oobe

./: Cargo.toml
.github/workflows/: ci.yml
common/: Cargo.toml  lang_select.json
common/src/: lib.rs  parser.rs
contrib/: Makefile  aosc-os-oobe  aosc-os-oobe-cli-launcher  aosc-os-oobe-cli.service  aosc-os-oobe-gui-launcher  aosc-os-oobe-gui.service  aosc-os-oobe-gui.xinit
contrib/po/: aosc-os-oobe-launcher.pot  en_US.po  zh_CN.po
desktop/: package.json
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/views/: AbortView.vue
oobe-cli/: Cargo.toml
oobe-cli/i18n/en-US/: oobe_cli.ftl
oobe-cli/i18n/zh-CN/: oobe_cli.ftl
oobe-cli/src/: main.rs
oobe-gui/: package.json
oobe-gui/src/: lang_select.json
oobe-gui/src-tauri/: Cargo.toml  tauri.conf.json
oobe-gui/src-tauri/src/: lib.rs
oobe-gui/src/locales/: en.json  zh-CN.json
oobe-gui/src/views/: WelcomeView.vue
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  utils.rs
src/router/: index.ts
src/views/: CompleteView.vue  ConfirmView.vue  ErrorView.vue  SwapFileView.vue
