[package]
name = "oobe-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = { git = "https://github.com/AOSC-Dev/oma-inquire", rev = "d81e6f47599bd566451ecf95b73ce88271761c2f" }
common = { path = "../common" }
anyhow = "1"

# i18n
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.5.0"
unic-langid = "0.9.5"
owo-colors = "4.2.2"
