[package]
name = "deploykit-gui"
version = "0.10.0"
description = "Deploykit GUI frontend"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
vergen-gix = "1.0.2"
vergen = "9.0.1"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "process", "macros"] }
nom = "8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-cli = "2.0.0"
anyhow = "1"
install = { git = "https://github.com/AOSC-Dev/deploykit-backend", package = "install", rev = "fe7cdda45715c2c973a6292b69291c74e6b975fe" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[lib]
name = "app_lib"
# FIXME: Remove 'lib': https://github.com/tauri-apps/tauri/issues/9547
crate-type = ["staticlib", "cdylib", "rlib"]
