[package]
name = "oobe-gui"
version = "0.1.0"
description = "AOSC OS oobe wizard"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
vergen-gix = "1.0.2"
vergen = "9.0.1"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-cli = "2.0.0"
anyhow = "1"
common = { path ="../../common" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[lib]
name = "app_lib"
# FIXME: Remove 'lib': https://github.com/tauri-apps/tauri/issues/9547
crate-type = ["staticlib", "cdylib", "rlib"]
